# realtime-room-game-live-proof

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  main.py  models.py  store.py
ops/: deploy-contract.v1.yaml
tests/: test_app.py  test_packaging.py  test_private_room_probe.py
tools/proof/: private_room_probe.py
