[build-system]
requires = ['setuptools>=69']
build-backend = 'setuptools.build_meta'

[project]
name = 'realtime-room-game-live-proof'
version = '0.1.0'
description = 'Generic single-instance browser realtime room game live proof for coolify-01.'
readme = 'README.md'
requires-python = '>=3.12'
dependencies = [
  'fastapi>=0.120,<0.121',
  'pydantic>=2.12,<3',
  'starlette>=0.49.1,<0.50',
  'uvicorn>=0.37,<0.38',
  'websockets>=15.0,<16',
]

[dependency-groups]
dev = [
  'coverage[toml]>=7.10,<8',
  'httpx>=0.28,<0.29',
  'pyright>=1.1.400,<1.2',
  'pytest>=8.4,<9',
  'pytest-cov>=6.2,<7',
  'ruff>=0.13,<0.14',
]

[tool.setuptools.packages.find]
include = ['app*']

[tool.pytest.ini_options]
addopts = '-q'
testpaths = ['tests']

[tool.coverage.run]
branch = true
source = ['app']

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = 'py312'

[tool.ruff.lint]
select = ['E', 'F', 'I']

[tool.pyright]
include = ['app', 'tests', 'tools/proof']
typeCheckingMode = 'basic'
venvPath = '.'
venv = '.venv'
